example-models/shomodel/vivado_hls.log

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
  **** SW Build 2552052 on Fri May 24 14:47:09 MDT 2019
  **** IP Build 2548770 on Fri May 24 18:01:18 MDT 2019
    ** Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.

source /data/Xilinx/Vivado/Vivado/2019.1/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/data/Xilinx/Vivado/Vivado/2019.1/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'pharris' on host 'correlator2.fnal.gov' (Linux_x86_64 version 3.10.0-957.21.3.el7.x86_64) on Mon May 18 16:38:47 CDT 2020
INFO: [HLS 200-10] On os "Scientific Linux release 7.8 (Nitrogen)"
INFO: [HLS 200-10] In directory '/home/pharris/tmp3/test_hack7/tmp2/hls4ml/example-models/shomodel'
Sourcing Tcl script 'build_prj.tcl'
INFO: [HLS 200-10] Opening project '/home/pharris/tmp3/test_hack7/tmp2/hls4ml/example-models/shomodel/myproject_prj'.
INFO: [HLS 200-10] Adding design file 'firmware/myproject.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'myproject_test.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'firmware/weights' to the project
INFO: [HLS 200-10] Adding test bench file 'tb_data' to the project
INFO: [HLS 200-10] Opening solution '/home/pharris/tmp3/test_hack7/tmp2/hls4ml/example-models/shomodel/myproject_prj/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 5ns.
INFO: [HLS 200-10] Setting target device to 'xcku115-flvb2104-2-i'
INFO: [XFORM 203-101] Allowed max sub elements number after partition is 4096.
INFO: [XFORM 203-101] Allowed max sub elements number after partition is 4096.
***** C SIMULATION *****
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
   Compiling ../../../../firmware/myproject.cpp in debug mode
../../../../firmware/myproject.cpp: In function ‘void myproject(input_t*, result_t*, model_default_t*, model_default_t*, short unsigned int&, short unsigned int&)’:
../../../../firmware/myproject.cpp:109:46: error: no match for ‘operator=’ (operand types are ‘layer13_t {aka ap_fixed<16, 6>}’ and ‘hls::stream<ap_fixed<16, 6> >’)
         layer136_out[pY+i1] = layer135_out[i1];//.write(layer135_out[i1].read());
                                              ^
In file included from /data/Xilinx/Vivado/Vivado/2019.1/include/ap_int.h:367:0,
                 from ../../../../firmware/myproject.h:24,
                 from ../../../../firmware/myproject.cpp:21:
/data/Xilinx/Vivado/Vivado/2019.1/include/ap_fixed.h:201:20: note: candidate: ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>& ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>::operator=(const ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>&) [with int _AP_W = 16; int _AP_I = 6; ap_q_mode _AP_Q = (ap_q_mode)5u; ap_o_mode _AP_O = (ap_o_mode)3u; int _AP_N = 0]
   INLINE ap_fixed& operator=(
                    ^~~~~~~~
/data/Xilinx/Vivado/Vivado/2019.1/include/ap_fixed.h:201:20: note:   no known conversion for argument 1 from ‘hls::stream<ap_fixed<16, 6> >’ to ‘const ap_fixed<16, 6>&’
/data/Xilinx/Vivado/Vivado/2019.1/include/ap_fixed.h:207:15: note: candidate: void ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>::operator=(const ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>&) volatile [with int _AP_W = 16; int _AP_I = 6; ap_q_mode _AP_Q = (ap_q_mode)5u; ap_o_mode _AP_O = (ap_o_mode)3u; int _AP_N = 0]
   INLINE void operator=(
               ^~~~~~~~
/data/Xilinx/Vivado/Vivado/2019.1/include/ap_fixed.h:207:15: note:   no known conversion for argument 1 from ‘hls::stream<ap_fixed<16, 6> >’ to ‘const ap_fixed<16, 6>&’
/data/Xilinx/Vivado/Vivado/2019.1/include/ap_fixed.h:212:20: note: candidate: ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>& ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>::operator=(const volatile ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>&) [with int _AP_W = 16; int _AP_I = 6; ap_q_mode _AP_Q = (ap_q_mode)5u; ap_o_mode _AP_O = (ap_o_mode)3u; int _AP_N = 0]
   INLINE ap_fixed& operator=(
                    ^~~~~~~~
/data/Xilinx/Vivado/Vivado/2019.1/include/ap_fixed.h:212:20: note:   no known conversion for argument 1 from ‘hls::stream<ap_fixed<16, 6> >’ to ‘const volatile ap_fixed<16, 6>&’
/data/Xilinx/Vivado/Vivado/2019.1/include/ap_fixed.h:218:15: note: candidate: void ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>::operator=(const volatile ap_fixed<_AP_W, _AP_I, _AP_Q, _AP_O, _AP_N>&) volatile [with int _AP_W = 16; int _AP_I = 6; ap_q_mode _AP_Q = (ap_q_mode)5u; ap_o_mode _AP_O = (ap_o_mode)3u; int _AP_N = 0]
   INLINE void operator=(
               ^~~~~~~~
/data/Xilinx/Vivado/Vivado/2019.1/include/ap_fixed.h:218:15: note:   no known conversion for argument 1 from ‘hls::stream<ap_fixed<16, 6> >’ to ‘const volatile ap_fixed<16, 6>&’
../../../../firmware/myproject.cpp:118:49: error: ‘layer13_t {aka struct ap_fixed<16, 6>}’ has no member named ‘empty’
    if(!layer136_out[(N_LAYER_12-1)*N_OUTPUTS_4].empty()) nnet::dense_large<layer13_t, layer14_t, config14>(layer136_out, layer14_out, w14, b14);
                                                 ^~~~~
../../../../firmware/myproject.cpp:129:23: error: ‘layer14_t {aka struct ap_fixed<16, 6>}’ has no member named ‘empty’
    if(!layer14_out[0].empty()) nnet::relu_stream<layer14_t, layer15_t, relu_config15>(layer14_out, layer15_out);
                       ^~~~~
../../../../firmware/myproject.cpp:129:111: error: no matching function for call to ‘relu_stream(layer14_t [128], hls::stream<ap_fixed<16, 6> > [128])’
    if(!layer14_out[0].empty()) nnet::relu_stream<layer14_t, layer15_t, relu_config15>(layer14_out, layer15_out);
                                                                                                               ^
In file included from ../../../../firmware/nnet_utils/nnet_conv2d_large.h:5:0,
                 from ../../../../firmware/parameters.h:14,
                 from ../../../../firmware/myproject.h:27,
                 from ../../../../firmware/myproject.cpp:21:
../../../../firmware/nnet_utils/nnet_activation.h:94:7: note: candidate: template<class data_T, class res_T, class CONFIG_T> void nnet::relu_stream(hls::stream<in_T>*, hls::stream<out_T>*)
 void  relu_stream(hls::stream<data_T> data[CONFIG_T::n_in], hls::stream<res_T> res[CONFIG_T::n_in])
       ^~~~~~~~~~~
../../../../firmware/nnet_utils/nnet_activation.h:94:7: note:   template argument deduction/substitution failed:
../../../../firmware/myproject.cpp:129:111: note:   cannot convert ‘layer14_out’ (type ‘layer14_t [128] {aka ap_fixed<16, 6> [128]}’) to type ‘hls::stream<ap_fixed<16, 6> >*’
    if(!layer14_out[0].empty()) nnet::relu_stream<layer14_t, layer15_t, relu_config15>(layer14_out, layer15_out);
                                                                                                               ^
make: *** [obj/myproject.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
4
    while executing
"source build_prj.tcl"
    invoked from within
"hls::main build_prj.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
INFO: [Common 17-206] Exiting vivado_hls at Mon May 18 16:38:50 2020...
